Criando testes para messageService e AuthenticationService e adicionando o sonarQube.